# Imaginate

./: .gitignore  CMakeLists.txt  README.md
assets/models/Cube/: Cube.mtl
assets/models/tempPlayer/: tempPlayer.mtl
assets/scripts/: bird.lua  test.lua
include/: Camera.h  Engine.h  Game.h  GameObject.h  InputManager.h  Mesh.h  Model.h  Scene.h  ScriptManager.h  Shader.h  Texture.h  Window.h
lua-definitions/: globals.lua
scenes/: test.json
src/: Engine.cpp  Game.cpp  GameObject.cpp  InputManager.cpp  Scene.cpp  ScriptManager.cpp  Window.cpp  main.cpp
src/shaders/: shader.fs  shader.vs
